# portfolio2025

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  TODO.md  docker-compose.yml
migrations/: 20251214144318_init.sql  20251217133804_drop_counter_column.sql
src/: main.rs  session.rs  startup.rs
src/handlers/: auth.rs  mod.rs
static/css/: base.css  components.css
static/js/: webauthn-client.js
templates/: base.html
templates/pages/: login.html
