[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
actix-files = "0.6.9"
actix-web = { version = "4.12.1" }
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation",] }
actix-session = { version = "0.11.0", features = ["cookie-session"]}
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.43"
thiserror = "2.0.17"
anyhow = "1.0.100"
chrono = "0.4.42"
rand = "0.8"
tracing-subscriber = "0.3.22"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "macros"] }
serde = "1.0.228"
serde_json = "1.0.145"
